data/derived/sp14/progs/unify/prog0271.ml.out
Characters 338-355:
  ( (v/10) mod 10 ) :: (v mod 10 :: acc) :: acc
                       ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
